# noto-sans-mono-bitmap-rs

./: .editorconfig  .gitignore  .typos.toml  CHANGELOG.md  CODEGEN.md  CONTRIBUTING.md  Cargo.toml  README.md  check_build.sh  check_crate_size.sh  codegen_n_build.sh  shell.nix
.github/: pull_request_template.md
.github/workflows/: build.yml  codegen.yml  dependabot-auto-merge.yml  qa.yml  rust.yml
check-size/: Cargo.toml  README.md
codegen/: Cargo.toml
codegen/src/: bytes_outsourcer.rs  font.rs  lib.rs  main.rs  unicode.rs
codegen/src/codegen_templates/: Cargo.toml.txt  lib.rs.template.txt  size_mod.template.txt  weight_mod.template.txt
codegen/src/res/: NotoSansMono-Regular.ttf.license
examples/: minimal.rs  show_chars_in_window.rs  transparent_background.rs
src/: lib.rs
src/bold/: mod.rs  size_14.rs  size_16.rs  size_18.rs  size_20.rs  size_22.rs  size_24.rs  size_32.rs  size_64.rs
src/light/: mod.rs  size_14.rs  size_16.rs  size_18.rs  size_20.rs  size_22.rs  size_24.rs  size_32.rs  size_64.rs
src/regular/: mod.rs  size_14.rs  size_16.rs  size_18.rs  size_20.rs  size_22.rs  size_24.rs  size_32.rs  size_64.rs
src/res_rasterized_characters/: 0x100_h14_wBold.txt  0x100_h14_wLight.txt  0x100_h14_wRegular.txt  0x100_h16_wBold.txt  0x100_h16_wLight.txt  0x100_h16_wRegular.txt  0x100_h18_wBold.txt  0x100_h18_wLight.txt  0x100_h18_wRegular.txt  0x100_h20_wBold.txt  0x100_h20_wLight.txt  0x100_h20_wRegular.txt  0x100_h22_wBold.txt  0x100_h22_wLight.txt  0x100_h22_wRegular.txt  0x100_h24_wBold.txt  0x100_h24_wLight.txt  0x100_h24_wRegular.txt  0x100_h32_wBold.txt  0x100_h32_wLight.txt  0x100_h32_wRegular.txt  (+7202 more)
