[package]
name = "codegen"
description = "Code generation crate for the noto sans mono bitmap crate."
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
# otherwise fontdue generation is very slow
opt-level = 1

[dependencies]
fontdue = "0.6.2"
minifb = "0.20.0"

