[package]
name = "codegen"
description = "Code generation crate for the noto sans mono bitmap crate."
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Maximum performance for the codegen binary.
# https://deterministic.space/high-performance-rust.html
lto = true
codegen-units = 1

[profile.dev]
# otherwise fontdue generation is very slow
opt-level = 1

[dependencies]
fontdue = { version = "~0.9", features = ["parallel", "simd"] }
minifb = "~0.28"
ttf-parser = "~0.25"

